fix StructureLegend.svelte: increase z-index to allow click events to update element colors in Structure viewer
- change default background color in Structure.svelte from (transparent) blue to white
- improve float formatting in tooltip of disordered sites: not trailing zeros in occupancies
- new tests for tooltip formatting and color picker functionality in structure-scene.test.ts and structure.test.ts

--- a/src/app.css
+++ b/src/app.css
@@ -61,6 +61,9 @@ a.btn {
   background-color: teal;
   padding: 2pt 4pt;
   transition: 0.2s;
+  /* TODO remove 2 lines below, just here as temp fix for svelte-zoo CodeExample SVG icons */
+  line-height: 1;
+  align-items: center;
 }
 :is(button, a.btn):hover {
   background-color: darkcyan;
